--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.1",
     "react-scripts": "5.0.1",
+    "react-simple-wysiwyg": "^3.4.0",
     "sweetalert2": "^11.22.4",
     "sweetalert2-react-content": "^5.1.0",
     "web-vitals": "^2.1.4"
