--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "lottie-react": "^2.4.1",
+    "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
